# cpp-cmake-devcontainer

./: .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  README.md  project_info.html
.devcontainer/: .clang-format  Dockerfile  devcontainer.json  extensions.txt  settings.vscode.json
scripts/: compile.sh  run_with_valgrind.sh
src/: CMakeLists.txt  main  main.cpp  test_example.cpp  test_example.h
src/.scannerwork/: report-task.txt
test/: test_file.cpp
